; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext3/extr_generic.c_mark_bitmap_end.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext3/extr_generic.c_mark_bitmap_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DL_INF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"mark end bits +%d through +%d used\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mark_bitmap_end(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp sge i32 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %50

12:                                               ; preds = %3
  %13 = load i32, i32* @DL_INF, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 @DEBUG(i32 %13, i8* %17)
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* %7, align 4
  br label %20

20:                                               ; preds = %32, %12
  %21 = load i32, i32* %7, align 4
  %22 = zext i32 %21 to i64
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 7
  %25 = sext i32 %24 to i64
  %26 = and i64 %25, -8
  %27 = icmp ult i64 %22, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %20
  %29 = load i32, i32* %7, align 4
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 @ext4_set_bit(i32 %29, i8* %30)
  br label %32

32:                                               ; preds = %28
  %33 = load i32, i32* %7, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %7, align 4
  br label %20

35:                                               ; preds = %20
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* %5, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %50

39:                                               ; preds = %35
  %40 = load i8*, i8** %6, align 8
  %41 = load i32, i32* %7, align 4
  %42 = ashr i32 %41, 3
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8, i8* %40, i64 %43
  %45 = load i32, i32* %5, align 4
  %46 = load i32, i32* %7, align 4
  %47 = sub nsw i32 %45, %46
  %48 = ashr i32 %47, 3
  %49 = call i32 @memset(i8* %44, i32 255, i32 %48)
  br label %50

50:                                               ; preds = %11, %39, %35
  ret void
}

declare dso_local i32 @DEBUG(i32, i8*) #1

declare dso_local i32 @ext4_set_bit(i32, i8*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
